Added unit tests to `NetworkKit`, added some UI tests, and cleaned up some code

--- a/Sources/Supporting Files/Localizable.strings
+++ b/Sources/Supporting Files/Localizable.strings
@@ -19,11 +19,11 @@
 "shopping_cart_buy_now_alert_action" = "Reset";
 
 
-"generic_error_title" = "Oops something went wrong";
-"generic_error_message" = "Please try again";
-"invalid_data_error_title" = "Invalid Data Error";
-"invalid_response_error_title" = "Invalid Response Error";
-"connectivity_error_message" = "Maybe check your internet connection?";
+//"generic_error_title" = "Oops something went wrong";
+//"generic_error_message" = "Please try again";
+//"invalid_data_error_title" = "Invalid Data Error";
+//"invalid_response_error_title" = "Invalid Response Error";
+//"connectivity_error_message" = "Maybe check your internet connection?";
 
 "ok" = "OK";
 "delete" = "Delete";
